--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
+cffi==1.14.0
 chardet==3.0.4
-Django==1.11.24
-django-forms-bootstrap==3.1.0
+cryptography==2.8
 idna==2.9
-Pillow==7.0.0
-pytz==2019.3
+pycparser==2.20
+pyOpenSSL==19.1.0
 requests==2.23.0
 stripe==2.44.0
 urllib3==1.25.8
