--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ python:
   - "3.7.2"
 install: "pip install -r requirements.txt"
 script:
-- SECRET_KEY="whatever" ./manage.py test
+- ./manage.py test
