--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,10 @@ language: python
 python:
   - "3.7.2"
 install: "pip install -r requirements.txt"
+env:
+  global:
+    - BUILD_ON_TRAVIS=true
 script:
-- ./manage.py test
+- python manage.py makemigrations
+- python manage.py migrate
+- python manage.py test
