--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
-cffi==1.14.0
+boto3==1.13.1
+botocore==1.16.1
 chardet==3.0.4
-cryptography==2.8
+dj-database-url==0.5.0
+Django==1.11.24
+django-forms-bootstrap==3.1.0
+django-storages==1.9.1
+docutils==0.15.2
+gunicorn==20.0.4
 idna==2.9
-pycparser==2.20
-pyOpenSSL==19.1.0
+jmespath==0.9.5
+Pillow==7.0.0
+psycopg2==2.8.5
+pytz==2019.3
 requests==2.23.0
+s3transfer==0.3.3
 stripe==2.44.0
 urllib3==1.25.8
-gunicorn==20.0.4
