--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,12 @@ Django==1.11.24
 django-forms-bootstrap==3.1.0
 django-storages==1.9.1
 docutils==0.15.2
-env==0.1.0
 gunicorn==20.0.4
 idna==2.9
 jmespath==0.9.5
 Pillow==7.0.0
 psycopg2==2.8.5
+python-dotenv==0.13.0
 pytz==2019.3
 requests==2.23.0
 s3transfer==0.3.3
